Landing Page before animations
Crying and throwing up

--- a/newspaper.html
+++ b/newspaper.html
@@ -15,16 +15,27 @@
     aria-label="main navigation"
     class="navigation">
         <div class="main-navigation">
-            <a href="landing.html" role="button" class="home"><strong>MURDER</strong></a>   
+            <a href="index.html" role="button" class="home"><strong>MURDER</strong></a>   
             <a href="cover.html" role="button" class="nav-item">COVER</a>  
             <a href="riddles.html" role="button" class="nav-item">RIDDLES</a>
             <a href="diary.html" role="button" class="nav-item" id="diary"><strong>DIARY</strong></a>
             <a href="newspaper.html" role="button" class="nav-item" id="newspaper-nav">NEWSPAPER</a>
-            
         </div>
-
-
     </nav>
     <!-- NAVGIATION END -->
+    <!-- FOOTER-->
+    <footer class="footer">
+        <div class="div-footer">
+            <div class="small-icon">
+                <a href="https://github.com/Marc-Anis-Asmar/EnglishPortfolio" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </div>
+            <p class="p-footer">
+                <span class="title-footer"><strong> The Word Is Murder </strong></span> 
+                <br />
+                 <span id="cp-year"> © 2023 Copyright. All Rights
+                Reserved.</span>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
