Landinge Page Final 1

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 <!-- NAVIGATION END-->
 <!-- TITLE THE WORD -->
-        <div class="column mr-6 mt-12" data-aos="fade-up">
+        <div class="title" data-aos="fade-up">
             <h1 class="p-title">The Word Is Murder</h1>
             <h4  class="p-subhead">An English Portfolio</h4>
         </div>
