--- a/riddles.html
+++ b/riddles.html
@@ -30,9 +30,9 @@
         <div class="box-around">
             <!-- <img src="assets/icons8-magnifier-96.png" alt="magnifier" class="img-rid"> -->
             <div class="inputs-riddles">
-                <p class="riddles-paragraph-game">1. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q1" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">2. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q2" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">3. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q3" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">1. A violent act that leaves one dead, a crime that can happen any day. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q1" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">2. The master of solving complex investigations, Hawthorne job in the book. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q2" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">3. A testimony of the reason of your absence, Im the one who saves you against false accusations  &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q3" placeholder="Write Answer"></p>
                 <p class="riddles-paragraph-game">4. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q4" placeholder="Write Answer"></p>
                 <p class="riddles-paragraph-game">5. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q5" placeholder="Write Answer"></p>
                 <p class="riddles-paragraph-game">6. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q6" placeholder="Write Answer"></p>
