--- a/cover.html
+++ b/cover.html
@@ -18,7 +18,7 @@
                     <a href="cover.html" role="button" class="nav-item">COVER</a>  
                     <a href="riddles.html" role="button" class="nav-item">RIDDLES</a>
                     <a href="diary.html" role="button" class="nav-item" id="diary"><strong>DIARY</strong></a>
-                    <a href="newspaper.html" role="button" class="nav-item" id="newspaper-nav">NEWSPAPER</a>
+                    <a href="songs.html" role="button" class="nav-item" id="songs-nav">SONG</a>
                 </div>
             </nav>
             <!-- NAVGIATION END -->
