--- a/riddles.html
+++ b/riddles.html
@@ -30,16 +30,16 @@
         <div class="box-around">
             <!-- <img src="assets/icons8-magnifier-96.png" alt="magnifier" class="img-rid"> -->
             <div class="inputs-riddles">
-                <p class="riddles-paragraph-game">1. A violent act that leaves one dead, a crime that can happen any day. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q1" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">2. The master of solving complex investigations, Hawthorne job in the book. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q2" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">3. A testimony of the reason of your absence, Im the one who saves you against false accusations  &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q3" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">4. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q4" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">5. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q5" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">6. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q6" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">7. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q7" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">8. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q8" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">9. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q9" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">10. Question number one &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q10" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">1. I am a violent act that leaves one dead, a crime that can happen any day. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q1" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">2. I am the master of solving complex investigations, Hawthorne's job in the book. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q2" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">3. I am the testimony of the reason of your absence, the one who saves you against false accusations.  &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q3" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">4. I am the twist that shakes the audience's beliefs, often happens when the murderer is caught (2 words). &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q4" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">5. I am the person who endured the crime, in the book, Diana & Damian Cawper. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q5" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">6. I am the reason behind most of crimes, the solver of mysteries.  &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q6" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">7. I help solve the investigation, a piece of proof against the guilty. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q7" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">8. I am a harmful threat that lurks in disguise, adjective to describe Cornwallis &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q8" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">9. I can often be a key to solve a crime, May's role when kids died (to change)   &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q9" placeholder="Write Answer"></p>
+                <p class="riddles-paragraph-game">10. I am a method to reveal the facts, Anthony & Hawthorne technique to find clues. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q10" placeholder="Write Answer"></p>
             </div>
         </div>
         <div class="div-button">
