--- a/diary.html
+++ b/diary.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="assets/murder.png" type="image/png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+
     <title>The Word Is Murder</title>
 </head>
-<body>
+<body class="testing">
         <!-- NAVIGATION START -->
         <nav 
         role="navigation"
@@ -19,11 +22,21 @@
                 <a href="riddles.html" role="button" class="nav-item">RIDDLES</a>
                 <a href="diary.html" role="button" class="nav-item" id="diary"><strong>DIARY</strong></a>
                 <a href="songs.html" role="button" class="nav-item" id="songs-nav">SONGS</a>
+                <script src="testing.js"></script>
             </div>
         </nav>
         <!-- NAVGIATION END -->
+        
+            <div class="container">
+                <img src="./images/Close-36.png" class="close" />
+                <h1>heading</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eaque quae illum inventore laborum quas,
+                    expedita quaerat officia voluptates distinctio blanditiis ad impedit voluptas ipsa quo esse tempore. Iste,
+                    officia?</p>
+                    <button type="button">click me</button>
+            </div>
         <!-- FOOTER -->
-        <footer class="footer">
+        <!-- <footer class="footer">
             <div class="div-footer">
                 <div class="small-icon">
                     <a href="https://github.com/Marc-Anis-Asmar/EnglishPortfolio" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -35,6 +48,6 @@
                     Reserved.</span>
                 </p>
             </div>
-        </footer>
+        </footer> -->
 </body>
 </html>
