--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>The Word Is Murder</title>
     <link rel="stylesheet" href="style/testing.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+    <link rel="icon" href="assets/murder.png" type="image/png">
+
 </head>
 <body>
 
