--- a/riddles.html
+++ b/riddles.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Word Is Murder</title>
-
+    <script src="riddles.js"></script>
+    <script src="popup.js"></script>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="assets/murder.png" type="image/png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+
 </head>
 <body class="body-rid"> 
+<div class="pcontainer">
         <!-- NAVIGATION START -->
-        <section class="hero">
+    <section class="hero">
             <nav 
             role="navigation"
             aria-label="main navigation"
@@ -26,40 +31,86 @@
                 </div>
             </nav>
     </section>
-    <section class="riddles">
-        <div class="box-around">
-            <!-- <img src="assets/icons8-magnifier-96.png" alt="magnifier" class="img-rid"> -->
-            <div class="inputs-riddles">
-                <p class="riddles-paragraph-game">1. I am a violent act that leaves one dead, a crime that can happen any day. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q1" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">2. I am the master of solving complex investigations, Hawthorne's job in the book. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q2" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">3. I am the testimony of the reason of your absence, the one who saves you against false accusations.  &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q3" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">4. I am the twist that shakes the audience's beliefs, often happens when the murderer is caught (2 words). &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q4" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">5. I am the person who endured the crime, in the book, Diana & Damian Cawper. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q5" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">6. I am the reason behind most of crimes, the solver of mysteries.  &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q6" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">7. I help solve the investigation, a piece of proof against the guilty. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q7" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">8. I am a harmful threat that lurks in disguise, adjective to describe Cornwallis &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q8" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">9. I can often be a key to solve a crime, May's role when kids died (to change)   &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q9" placeholder="Write Answer"></p>
-                <p class="riddles-paragraph-game">10. I am a method to reveal the facts, Anthony & Hawthorne technique to find clues. &nbsp;&nbsp;<input type="text" maxlength="10" class="input-text" id="q10" placeholder="Write Answer"></p>
-            </div>
+
+
+
+    <div class="box-around">
+    <form id="answer-form" class="inputs-riddles">
+        <div class="question">
+          <label for="answer1" class="riddles-paragraph-game">1. I am a violent act that leaves one dead, a crime that can happen any day. <span id="span" class="hide">(MURDER)</span></label>
+          <input type="text" id="answer1" name="answer1">
         </div>
-        <div class="div-button">
-        <button class="reveal-btn" id="validate-btn">Validate Answers <span></span></button> &nbsp; &nbsp; &nbsp;
-        <button class="reveal-btn" id="show-btn">Show Answers <span></span></button></div>
-    </section>
+        <div class="question">
+          <label for="answer2">2. I am the master of solving complex investigations, Hawthorne's job in the book. <span id="span" class="hide">(DETECTIVE)</span></label>
+          <input type="text" id="answer2" name="answer2">
+        </div>
+        <div class="question">
+            <label for="answer3" class="riddles-paragraph-game">3. I am the testimony of the reason of your absence, the one who saves you against false accusations. <span id="span" class="hide">(ALIBI)</span></label>
+            <input type="text" id="answer3" name="answer3">
+        </div>
+        <div class="question">
+            <label for="answer4">4. I am the twist that shakes the audience's beliefs, often happens when the murderer is caught (2 words). <span id="span" class="hide">(PLOT TWIST)</span></label>
+            <input type="text" id="answer4" name="answer4">
+        </div>
+        <div class="question">
+            <label for="answer5" class="riddles-paragraph-game">5. I am the person who endured the crime, in the book, Diana & Damian Cawper. <span id="span" class="hide">(VICTIM)</span></label>
+            <input type="text" id="answer5" name="answer5">
+        </div>
+        <div class="question">
+            <label for="answer6">6. I am the reason behind most of crimes, the solver of mysteries. <span id="span" class="hide">(MOTIVE)</span></label>
+            <input type="text" id="answer6" name="answer6">
+        </div>
+        <div class="question">
+            <label for="answer7" class="riddles-paragraph-game">7. I help solve the investigation, a piece of proof against the guilty. <span id="span" class="hide">(EVIDENCE)</span></label>
+            <input type="text" id="answer7" name="answer7">
+        </div>
+        <div class="question">
+            <label for="answer8">8. I am a harmful threat that lurks in disguise, adjective to describe Cornwallis. <span id="span" class="hide">(PERNICIOUS)</span></label>
+            <input type="text" id="answer8" name="answer8">
+        </div>
+        <div class="question">
+            <label for="answer9" class="riddles-paragraph-game">9. I can often be a key to solve a crime, May's role when kids died (to change) <span id="span" class="hide">(WITNESS)</span></label>
+            <input type="text" id="answer9" name="answer9">
+        </div>
+        <div class="question">
+            <label for="answer10">10. I am a method to reveal the facts, Anthony & Hawthorne technique to find clues. <span id="span" class="hide">(INTERROGATION)</span></label>
+            <input type="text" id="answer10" name="answer10">
+        </div>
+        <!-- Add more questions here -->
+        <div class="button">
+            <button type="submit" id="validate-button" >Validate Answers</button>
+            <button type="button" id="show-button" >Show Answers</button>
+        </div>
+      </form>
+</div>
+
         <!-- NAVGIATION END -->
     <!-- FOOTER -->
-    <footer class="footer">
-        <div class="div-footer">
-            <div class="small-icon">
-                <a href="https://github.com/Marc-Anis-Asmar/EnglishPortfolio" target="_blank"><i class="fab fa-github"></i></a>
+    
+<footer class="footer">
+            <div class="div-footer">
+                
+                <p class="p-footer">
+                    <span class="title-footer"><strong> The Word Is Murder </strong></span> 
+                    <br />
+                     <span id="cp-year"> © 2023 Copyright. All Rights
+                    Reserved.</span>
+                </p>
+                <div class="small-icon">
+                    <a href="https://github.com/Marc-Anis-Asmar/EnglishPortfolio" target="_blank" class="github"><i class="fab fa-github"></i></a>
+                </div>
             </div>
-            <p class="p-footer">
-                <span class="title-footer"><strong> The Word Is Murder </strong></span> 
-                <br />
-                 <span id="cp-year"> © 2023 Copyright. All Rights
-                Reserved.</span>
-            </p>
-        </div>
-    </footer>
+</footer>
+</div>
+<div class="popup-container">
+    <div class="popup-content">
+      <div class="popup-text">
+        <h2>Solve the Mystery with these riddles!</h2>
+        <p>You just entered the riddle page, here are some riddles to test your solving skills.</p>
+        <p>"Write ten riddles from the vocabuly of the word is murder ....".</p>
+        <button class="popup-close-btn">Got it!</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
