--- a/songs.html
+++ b/songs.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Word Is Murder</title>
+    <link rel="icon" href="assets/murder.png" type="image/png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 
     <link rel="stylesheet" href="style/style.css">
 </head>
