--- a/riddles.html
+++ b/riddles.html
@@ -34,54 +34,56 @@
 
 
 
-    <div class="box-around">
-    <form id="answer-form" class="inputs-riddles">
-        <div class="question">
-          <label for="answer1" class="riddles-paragraph-game">1. I am a violent act that leaves one dead, a crime that can happen any day. <span id="span" class="hide">(MURDER)</span></label>
-          <input type="text" id="answer1" name="answer1">
-        </div>
-        <div class="question">
-          <label for="answer2">2. I am the master of solving complex investigations, Hawthorne's job in the book. <span id="span" class="hide">(DETECTIVE)</span></label>
-          <input type="text" id="answer2" name="answer2">
-        </div>
-        <div class="question">
-            <label for="answer3" class="riddles-paragraph-game">3. I am the testimony of the reason of your absence, the one who saves you against false accusations. <span id="span" class="hide">(ALIBI)</span></label>
-            <input type="text" id="answer3" name="answer3">
-        </div>
-        <div class="question">
-            <label for="answer4">4. I am the twist that shakes the audience's beliefs, often happens when the murderer is caught (2 words). <span id="span" class="hide">(PLOT TWIST)</span></label>
-            <input type="text" id="answer4" name="answer4">
-        </div>
-        <div class="question">
-            <label for="answer5" class="riddles-paragraph-game">5. I am the person who endured the crime, in the book, Diana & Damian Cawper. <span id="span" class="hide">(VICTIM)</span></label>
-            <input type="text" id="answer5" name="answer5">
-        </div>
-        <div class="question">
-            <label for="answer6">6. I am the reason behind most of crimes, the solver of mysteries. <span id="span" class="hide">(MOTIVE)</span></label>
-            <input type="text" id="answer6" name="answer6">
-        </div>
-        <div class="question">
-            <label for="answer7" class="riddles-paragraph-game">7. I help solve the investigation, a piece of proof against the guilty. <span id="span" class="hide">(EVIDENCE)</span></label>
-            <input type="text" id="answer7" name="answer7">
-        </div>
-        <div class="question">
-            <label for="answer8">8. I am a harmful threat that lurks in disguise, adjective to describe Cornwallis. <span id="span" class="hide">(PERNICIOUS)</span></label>
-            <input type="text" id="answer8" name="answer8">
-        </div>
-        <div class="question">
-            <label for="answer9" class="riddles-paragraph-game">9. I can often be a key to solve a crime, May's role when kids died (to change) <span id="span" class="hide">(WITNESS)</span></label>
-            <input type="text" id="answer9" name="answer9">
-        </div>
-        <div class="question">
-            <label for="answer10">10. I am a method to reveal the facts, Anthony & Hawthorne technique to find clues. <span id="span" class="hide">(INTERROGATION)</span></label>
-            <input type="text" id="answer10" name="answer10">
-        </div>
-        <!-- Add more questions here -->
-        <div class="button">
-            <button type="submit" id="validate-button" >Validate Answers</button>
-            <button type="button" id="show-button" >Show Answers</button>
-        </div>
-      </form>
+<div class="box-around">
+    <div class="box2">
+        <form id="answer-form" class="inputs-riddles">
+            <div class="question">
+            <label for="answer1" class="riddles-paragraph-game">1. I am a violent act that leaves one dead, a crime that can happen any day. <span id="span" class="hide">(MURDER)</span></label>
+             <br> <input type="text" id="answer1" name="answer1" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+            <label for="answer2">2. I am the master of solving complex investigations, Hawthorne's job in the book. <span id="span" class="hide">(DETECTIVE)</span></label>
+            <br><input type="text" id="answer2" name="answer2" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+                <label for="answer3" class="riddles-paragraph-game">3. I am the testimony of the reason of your absence, the one who saves you against false accusations. <span id="span" class="hide">(ALIBI)</span></label>
+                <br><input type="text" id="answer3" name="answer3" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+                <label for="answer4">4. I am the twist that shakes the audience's beliefs, often happens when the murderer is caught (2 words). <span id="span" class="hide">(PLOT TWIST)</span></label>
+                <br><input type="text" id="answer4" name="answer4" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+                <label for="answer5" class="riddles-paragraph-game">5. I am the person who endured the crime, in the book, Diana & Damian Cawper. <span id="span" class="hide">(VICTIM)</span></label>
+                <br><input type="text" id="answer5" name="answer5" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+                <label for="answer6">6. I am the reason behind most of crimes, the solver of mysteries. <span id="span" class="hide">(MOTIVE)</span></label>
+                <br><input type="text" id="answer6" name="answer6" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+                <label for="answer7" class="riddles-paragraph-game">7. I help solve the investigation, a piece of proof against the guilty. <span id="span" class="hide">(EVIDENCE)</span></label>
+                <br><input type="text" id="answer7" name="answer7" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+                <label for="answer8">8. I am a harmful threat that lurks in disguise, adjective to describe Cornwallis. <span id="span" class="hide">(PERNICIOUS)</span></label>
+                <br><input type="text" id="answer8" name="answer8" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+                <label for="answer9" class="riddles-paragraph-game">9. I can often be a key to solve a crime, May's role when kids died (to change) <span id="span" class="hide">(WITNESS)</span></label>
+                <br><input type="text" id="answer9" name="answer9" placeholder="WRITE ANSWER">
+            </div>
+            <div class="question">
+                <label for="answer10">10. I am a method to reveal the facts, Anthony & Hawthorne technique to find clues. <span id="span" class="hide">(INTERROGATION)</span></label>
+                <br><input type="text" id="answer10" name="answer10" placeholder="WRITE ANSWER">
+            </div>
+            <!-- Add more questions here -->
+            <div class="button">
+                <button type="submit" id="validate-button" >Validate Answers</button>
+                <button type="button" id="show-button" >Show Answers</button>
+            </div>
+        </form>
+    </div>
 </div>
 
         <!-- NAVGIATION END -->
