--- a/cover.html
+++ b/cover.html
@@ -8,6 +8,7 @@
     <script src="popup.js"></script>
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="assets/murder.png" type="image/png">
+    <script src="magnifying.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 
 </head>
@@ -31,7 +32,29 @@
             </nav>
     </section>
 
-        <!-- NAVGIATION END -->
+    <!-- NAVGIATION END -->
+
+    <!-- COVER START -->
+    <div class="cintro">
+        <h1>Unveil the new <span class="underlined underline-clip">design</span> of the book cover</h1>
+        <h3 id="ch3"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aspernatur officia magnam numquam beatae, quaerat, quia aperiam minus maxime voluptatem sunt error maiores, eligendi dolorum corporis? Cumque placeat debitis beatae.</h3>
+    </div>
+    <div class="cimg">
+        <div class="cimg-t">
+            <img src="assets/THE WORD IS MURDER (2).png" alt="If you see this text please contact me" class="img-t">
+        </div>
+    </div>
+
+    <div class="cexplain">
+      
+        <p class="cpa"> <strong>explaingini here text</strong> </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae exercitationem laborum id nostrum, facilis sint illum beatae quis ratione magni! Delectus officiis molestiae fuga, reprehenderit eos nisi earum dignissimos praesentium.</p>
+
+    </div>
+
+
+    <!-- COVER END -->
+
     <!-- FOOTER -->
     
 <footer class="footer">
