--- a/cover.html
+++ b/cover.html
@@ -7,6 +7,7 @@
     <title>The Word Is Murder</title>
     <script src="popup.js"></script>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style2.css">
     <link rel="icon" href="assets/murder.png" type="image/png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 
