--- a/riddles.html
+++ b/riddles.html
@@ -70,7 +70,7 @@
                 <br><input type="text" id="answer8" name="answer8" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
-                <label for="answer9" class="riddles-paragraph-game">9. I can often be a key to solve a crime, May's role when kids died (to change) <span id="span" class="hide">(WITNESS)</span></label>
+                <label for="answer9" class="riddles-paragraph-game">9. I an adjective to describe actions kept in secret, I reflect the relationship between Alan Godwin and Mary <span id="span" class="hide">(WITNESS)</span></label>
                 <br><input type="text" id="answer9" name="answer9" placeholder="WRITE ANSWER">
             </div>
             <div class="question">
@@ -109,7 +109,7 @@
       <div class="popup-text">
         <h2>Solve the Mystery with these riddles!</h2>
         <p>You just entered the riddle page, here are some riddles to test your solving skills.</p>
-        <p>"Write ten riddles from the vocabuly of the word is murder ....".</p>
+        <p>"Write ten riddles for words found in your novel. Make sure to include an answer key".</p>
         <button class="popup-close-btn">Got it!</button>
       </div>
     </div>
